--- a/index.org
+++ b/index.org
@@ -50,15 +50,16 @@ If you'd like to know what other people have said about Org-mode, take
 a look at our [[http://orgmode.org/worg/org-quotes.php][collected quotes about Org]].
 
 * News
+- <2009-02-20 Fri>: Release 6.23
 - <2009-02-10 Tue>: Release 6.22
 - <2009-02-02 Mon>: Release 6.21
 - <2009-01-28 Wed>: Release 6.20
 - <2009-01-25 Sun>: Release 6.19
 - <2009-01-20 Tue>: Release 6.18
 
-* Current Version (6.23)
+* Current Version (6.23a)
 
-The current version is 6.23.  To see what has changed in recent
+The current version is 6.23a.  To see what has changed in recent
 releases, check this detailed list of [[file:Changes.html][user-visible changes]].
 
 This package works on Emacs 23 and 22, and (with minor restrictions)
@@ -71,7 +72,7 @@ a bit behind the website release.
 
 ** The standard distribution
 
-Download as [[file:org-6.23.zip][zip file]] or [[file:org-6.23.tar.gz][gzipped tar archive]].  These archives contain
+Download as [[file:org-6.23a.zip][zip file]] or [[file:org-6.23a.tar.gz][gzipped tar archive]].  These archives contain
 both the Lisp file org.el and the documentation in PDF and (TeX)Info
 formats.  Follow the instructions for [[http://orgmode.org/manual/Installation.html#Installation][Installation]] and [[http://orgmode.org/manual/Activation.html#Activation][Activation]].
 
