--- a/Changes.org
+++ b/Changes.org
@@ -446,7 +446,7 @@ definitions may not contain empty lines.
     Short literal examples can be created by preceding lines
     with a colon.  Such lines must now have a space after the
     colon.  I believe this is already general practice, but now
-    it must be like this.  The only exception are lines what are
+    it must be like this.  The only exception are lines that are
     empty except for the colon.    
 
 ** Details
